--- a/src/styles/custom/about.scss
+++ b/src/styles/custom/about.scss
@@ -1,27 +1,6 @@
 .about {
-  &__img {
-  }
-  &__text {
+  &__inner {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-
-    width: 100%;
-
-    text-align: justify;
-  }
-
-  &__paragraph {
-    display: block;
-
-    max-width: 700px;
-    &:first-child {
-      margin-bottom: 40px;
-      padding-bottom: 40px;
-      @include bp994-block() {
-        margin-bottom: 90px;
-        padding-bottom: 90px;
-      }
-    }
   }
 }
