--- a/src/styles/custom/section.scss
+++ b/src/styles/custom/section.scss
@@ -1,3 +1,49 @@
+.section {
+  &__title {
+    display: flex;
+    justify-content: center;
+
+    margin-bottom: 25px;
+    @include bp994-block() {
+      margin-bottom: 50px;
+    }
+  }
+  &__cell {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    width: 100%;
+    margin-bottom: 15px;
+    @include bp994-block() {
+      margin-bottom: 25px;
+    }
+  }
+  &__number {
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 80px;
+    @include bp994-block() {
+      font-size: 100px;
+      line-height: 130px;
+    }
+  }
+  &__text {
+    text-align: center;
+
+    font-size: 24px;
+    line-height: 32px;
+    @include bp994-block() {
+      font-size: 30px;
+      line-height: 40px;
+    }
+  }
+  &__deco {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+  }
+}
 // .section {
 //   &__inner {
 //     display: flex;
