--- a/src/views/blocks/about/about.njk
+++ b/src/views/blocks/about/about.njk
@@ -1,48 +1,19 @@
-<div class="about page__about section">
-  <div class="section__inner">
-    <div class="section__box layout__wrap">
-      <div class="section__title title title_main">
-        <div class="title__text">
-          About
+<div class="about">
+    <div class="about__inner">
+        <div class="section__cell">
+            <div class="section__number">2,215</div>
+            <div class="section__text">servers onboarded</div>
         </div>
-      </div>
-      <div class="section__deco">
-        <img
-          src="/img/icons/icon__flower.svg"
-          alt=""
-          class="deco__pattern img section__img"
-        >
-      </div>
-      <div class="about__text">
-        <p
-          class="paragraph deco__b_b about__paragraph"
-          data-aos="fade-up"
-          data-aos-duration="800"
-        >
-          <span class="deco__w_700">MetaHelix</span>
-          is a
-          <a
-            href="#"
-            class="link deco__w_700"
-          >Discord based platform</a>
-          built from the ground up for NFT communities, initially in the Solana ecosystem, that provides a suite of commonly required utilities and tools, with a
-          <span class="deco__w_700 deco__i">plug-and-play setup</span>
-          that requires zero time to start using.
-        </p>
-
-        <p
-          class="paragraph about__paragraph"
-          data-aos="fade-up"
-          data-aos-duration="800"
-        >
-          <span class="deco__w_700">With the goal of becoming the back-bone of all the NFT communities</span>
-          within Discord,
-          <span class="deco__w_700">we are now ready to announce MetaHelix Ethereum. </span>
-          With major upgrades to the Ethereum network,
-          <span class="deco__w_700">we believe the NFT industry will return with a boom</span>
-          in both SOL and ETH.
-        </p>
-      </div>
+        <div class="section__cell">
+            <div class="section__number">300,000+</div>
+            <div class="section__text">users being verified</div>
+        </div>
+        <div class="section__cell">
+            <div class="section__number">2,500+</div>
+            <div class="section__text">
+                SOL was already airdropped
+                to the NFT holders
+            </div>
+        </div>
     </div>
-  </div>
 </div>
