--- a/src/views/layouts/layout-section-base.njk
+++ b/src/views/layouts/layout-section-base.njk
@@ -1,8 +1,18 @@
-<section class="section page__sectio {{ inject.sectionClass }}">
+<section class="section page__section {{ inject.sectionClass }}">
     <div class="section__inner">
         <div class="layout__{{ inject.wrapper }}">
+            {% if inject.sectionTitle %}
+                <div class="section__title title title_main">
+                    <div class="title__text">{{ inject.sectionTitle }}</div>
+                </div>
+            {% endif %}
             {% block section %}
             {% endblock section %}
+            {% if inject.deco %}
+                <div class="section__deco">
+                    <img src="/img/icons/icon__flower.svg" alt="" class="deco__pattern img" />
+                </div>
+            {% endif %}
         </div>
     </div>
 </section>
