--- a/src/views/blocks/about/about.njk
+++ b/src/views/blocks/about/about.njk
@@ -2,18 +2,26 @@
     <div class="about__inner">
         <div class="section__cell">
             <div class="section__number">2,215</div>
-            <div class="section__text">servers onboarded</div>
+            <div class="section__about">servers onboarded</div>
         </div>
         <div class="section__cell">
             <div class="section__number">300,000+</div>
-            <div class="section__text">users being verified</div>
+            <div class="section__about">users being verified</div>
         </div>
         <div class="section__cell">
             <div class="section__number">2,500+</div>
-            <div class="section__text">
+            <div class="section__about">
                 SOL was already airdropped
                 to the NFT holders
             </div>
+        </div>
+        <div class="section__text paragraph">
+            <p class="paragraph__item">
+                <span class="deco__w deco__w_700">MetaHelix</span> is a Discord-based technology platform built from the ground up for <span class="deco__w deco__w_700">NFT</span> communities, providing a suite of powerful utilities and tools for projects to empower their <span class="deco__w deco__w_700">Web3</span> communities, with an effortless plug-and-play setup.
+            </p>
+            <p class="paragraph__item">
+                Initially launching on <span class="deco__w deco__w_700">Solana, MetaHelix</span> is one of the leading utility providers for the SOL ecosystem. The <span class="deco__w deco__w_700">MetaHelix</span> project is now going cross-chain, taking its' experience and knowledge to new sectors of the industry, and expanding the <span class="deco__w deco__w_700">HelixDAO</span> community
+            </p>
         </div>
     </div>
 </div>
