--- a/src/views/blocks/feature/feature-item.njk
+++ b/src/views/blocks/feature/feature-item.njk
@@ -1,4 +1,4 @@
-<div class="feature__item feature-item">
+<div class="feature__item feature-item feature-item_init">
     <div class="feature-item__inner">
         <div class="feature-item__imgcell">
             <div class="feature-item__imgbox">
