--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,6 +47,8 @@
 @import './custom/work';
 @import './custom/work-item';
 @import './custom/menu';
+@import './custom/feature';
+@import './custom/feature-item';
 /* Навигация */
 * {
   box-sizing: border-box;
