--- a/src/styles/preset/var.scss
+++ b/src/styles/preset/var.scss
@@ -26,6 +26,11 @@ $gradient_bg_tmp: linear-gradient(
   #085788 67.42%,
   #085788 89.15%
 );
+$gradient_bg_light: linear-gradient(
+  202.08deg,
+  rgba(50, 164, 235, 0.7) 0.83%,
+  rgba(11, 118, 184, 0.7) 97.41%
+);
 /* TIME*/
 
 $th: 0.25s;
