--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -24,6 +24,13 @@
     deco: true
     } %}
     {% include "sections/feature-section.njk" %}
+    {% set inject = {
+    wrapper: 'wrap',
+    sectionTitle: 'Holders benefits',
+    sectionClass: '',
+    deco: true
+    } %}
+    {% include "sections/benefit-section.njk" %}
     <!-- {% include "blocks/token/token.njk" %} -->
     <!-- {% include "sections/section-bg.njk" %} -->
     <!-- {% include "blocks/footer/footer.njk" %} -->
