--- a/src/styles/custom/benefit-item.scss
+++ b/src/styles/custom/benefit-item.scss
@@ -14,8 +14,8 @@
     align-items: center;
     justify-content: center;
 
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     margin-bottom: 30px;
 
     &::after {
@@ -33,23 +33,18 @@
         #399cdc 0%,
         rgba(57, 156, 220, 0) 100%
       ); */
-      background: linear-gradient(
-        180deg,
-        #17376b 0%,
-        rgba(57, 156, 220, 0) 100%
-      );
-
+      background: $gradient_bg_light;
       box-shadow: 0px 28px 23px 11px rgba(0, 0, 0, 0.15);
-      mix-blend-mode: multiply;
-      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
+      // mix-blend-mode: multiply;
+      // filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
     }
 
     @include bp768-block() {
       position: absolute;
       left: 0;
 
-      width: calc(250px - 30px);
-      margin-right: 30px;
+      width: 200px;
+      margin-right: 15px;
       margin-bottom: 0;
 
       transition: all 0.3s;
@@ -62,16 +57,17 @@
     position: relative;
     z-index: 1;
 
-    width: 130px;
-    height: 130px;
-
+    width: 120px;
+    height: 120px;
+    display: flex;
+    align-items: center;
     @include bp768-block() {
       position: absolute;
 
-      bottom: 50%;
-      left: 45px;
+      top: 50%;
+      left: 40px;
 
-      transform: translateY(50%);
+      transform: translateY(-50%);
     }
   }
 
@@ -93,9 +89,9 @@
       align-items: center;
       justify-content: flex-start;
 
-      width: calc(100% - 30px - 250px - 30px);
-      height: 250px;
-      margin-left: 280px;
+      width: calc(100% - 15px - 200px - 15px);
+      height: 200px;
+      margin-left: 200px;
 
       text-align-last: left;
 
@@ -107,7 +103,8 @@
     padding-bottom: 15px;
 
     text-align: justify;
-
+    display: flex;
+    justify-content: center;
     border-bottom: 2px solid $color_light;
     @include bp768-block() {
       //max-width: 600px;
