--- a/src/styles/custom/benefit.scss
+++ b/src/styles/custom/benefit.scss
@@ -1,24 +1,24 @@
 .benefit {
-  &__text {
-    position: relative;
-    z-index: 1;
+  // &__text {
+  //   position: relative;
+  //   z-index: 1;
 
-    width: 100%;
+  //   width: 100%;
 
-    margin-bottom: 30px;
+  //   margin-bottom: 30px;
 
-    text-align: center;
+  //   text-align: center;
 
-    font-size: 18px;
-    line-height: 18px;
+  //   font-size: 18px;
+  //   line-height: 18px;
 
-    @include bp994-block() {
-      margin-bottom: 50px;
+  //   @include bp994-block() {
+  //     margin-bottom: 50px;
 
-      font-size: 24px;
-      line-height: 24px;
-    }
-  }
+  //     font-size: 24px;
+  //     line-height: 24px;
+  //   }
+  // }
 
   &__list {
     display: flex;
