--- a/src/views/blocks/benefit/benefit.njk
+++ b/src/views/blocks/benefit/benefit.njk
@@ -1,30 +1,9 @@
-<section class="benefit page__benefit section">
-  <div class="section__inner">
-    <div class="section__box layout__wrap">
-      <div class="section__title title title_main">
-        <div class="title__text">
-          Holders benefits
+<div class="benefit">
+    <div class="benefit__inner">
+        <div class="benefit__list">
+            {% for item in benefit.benefit_list %}
+                {% include 'blocks/benefit/benefit-item.njk' %}
+            {% endfor %}
         </div>
-      </div>
-      <div class="section__deco">
-        <img
-          src="/img/icons/icon__flower.svg"
-          alt=""
-          class="deco__pattern img section__img"
-        >
-      </div>
-
-      <div class="benefit__text">Holders of Helix NFT:</div>
-
-      <div class="benefit__list">
-        {% set inject = {
-        parentClass: "benefit__item "
-        } %}
-        {% for benefit in benefit.benefit_list %}
-        {% include "blocks/benefit/benefit-item.njk" %}
-        {% endfor %}
-      </div>
-
     </div>
-  </div>
-</section>
+</div>
