--- a/src/styles/custom/section.scss
+++ b/src/styles/custom/section.scss
@@ -28,6 +28,16 @@
       line-height: 130px;
     }
   }
+  &__about {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    @include bp994-block() {
+      font-size: 30px;
+      line-height: 38px;
+    }
+  }
   &__text {
     text-align: center;
 
@@ -41,6 +51,7 @@
   &__deco {
     display: flex;
     justify-content: center;
+
     margin-top: 50px;
   }
 }
