--- a/src/views/blocks/token/token.njk
+++ b/src/views/blocks/token/token.njk
@@ -7,8 +7,8 @@
                 <br>
                 will be minted in the first drop.
             </div>
-            {% include "blocks/token/token-item.njk" %}
         </div>
+        {% include "blocks/diagram/diagram.njk" %}
     </div>
 </div>
 
