--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -1,61 +1,12 @@
-<div class="diagram diagram_init {{inject.parentClass}}">
-  <div
-    class="diagram__inner"
-    data-aos="zoom-in"
-    data-aos-duration="800"
-  >
-
-    <div class="diagram__item diagram__item_first">
-      <div
-        class="pie no-round"
-        style="
-        --p: 90;
-        --b: 80px;
-        --c: #031F31;
-        --w: 250px;
-        --r: -110deg;
-
-        --d-p: 90;
-        --d-b: 100px;
-        --d-c: #031F31;
-        --d-w: 450px;
-        --d-r: -110deg;
-        "
-      >
-
-      </div>
-
+<div class="token__diagram diagram">
+    <div class="diagram__inner">
+        <div class="diagram__controlbox">
+            <div class="diagram__control">
+                <div class="icon icon_control"></div>
+            </div>
+        </div>
     </div>
-
-
-    <div class="diagram__item diagram__item_second">
-      <div
-        class="pie no-round"
-        style="
-        --p: 10;
-        --b: 60px;
-        --c: #142f5e;
-        --w: 200px;
-        --r: -146deg;
-
-        --d-p: 10;
-        --d-b: 80px;
-        --d-c: #142f5e;
-        --d-w: 400px;
-        --d-r: -146deg;
-
-        "
-      >
-
-      </div>
+    <div class="diagram__box">
+        <div class="diagram__circle diagram__circle_fist"></div>
     </div>
-
-    <div class="diagram__box diagram__item diagram__item_third">
-      <div class="diagram__text">
-        <div class="diagram__init">5000</div>
-        <div class="diagram__active">500</div>
-      </div>
-    </div>
-  </div>
-
 </div>
