--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -5,8 +5,12 @@
                 <div class="icon icon_control"></div>
             </div>
         </div>
-    </div>
-    <div class="diagram__box">
-        <div class="diagram__circle diagram__circle_fist"></div>
+        <div class="diagram__diagrambox">
+            <svg class="diagram__item diagram__item_first"
+                 viewbox="0 0 180 180"
+                 xmlns="http://www.w3.org/2000/svg">
+                <circle class="diagram__circle diagram__circle_first"  stroke-width="10" fill="none" cx="90" cy="90" r="85" />
+            </svg>
+        </div>
     </div>
 </div>
