--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -9,7 +9,24 @@
             <svg class="diagram__item diagram__item_first"
                  viewbox="0 0 180 180"
                  xmlns="http://www.w3.org/2000/svg">
-                <circle class="diagram__circle diagram__circle_first"  stroke-width="10" fill="none" cx="90" cy="90" r="85" />
+                <circle class="diagram__circle diagram__circle_first" stroke-dasharray="345.4,345.4" stroke="url(#gradient-first)" fill="none" cx="90" cy="90" r="55" />
+                <defs>
+                <linearGradient id="gradient-first" x1="0%" y1="0%" x2="0%" y2="100%" gradientTransform="rotate(218)">
+                <stop offset="0%" stop-color="#031F31" />
+                <stop offset="80%" stop-color="#399CDC" />
+                </linearGradient>
+                </defs>
+            </svg>
+            <svg class="diagram__item diagram__item_second"
+                 viewbox="0 0 180 180"
+                 xmlns="http://www.w3.org/2000/svg">
+                <circle class="diagram__circle diagram__circle_second" fill="none" cx="90" cy="90" r="55" />
+            </svg>
+            <svg class="diagram__item diagram__item_third"
+                 viewbox="0 0 180 180"
+                 xmlns="http://www.w3.org/2000/svg">
+                <circle class="diagram__circle diagram__circle_third" cx="90" cy="90" r="90" />
+                <defs>
             </svg>
         </div>
     </div>
