inwork: circle state_1

--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -6,28 +6,34 @@
             </div>
         </div>
         <div class="diagram__diagrambox">
-            <svg class="diagram__item diagram__item_first"
-                 viewbox="0 0 180 180"
-                 xmlns="http://www.w3.org/2000/svg">
-                <circle class="diagram__circle diagram__circle_first" stroke-dasharray="345.4,345.4" stroke="url(#gradient-first)" fill="none" cx="90" cy="90" r="55" />
-                <defs>
-                <linearGradient id="gradient-first" x1="0%" y1="0%" x2="0%" y2="100%" gradientTransform="rotate(218)">
-                <stop offset="0%" stop-color="#031F31" />
-                <stop offset="80%" stop-color="#399CDC" />
-                </linearGradient>
-                </defs>
-            </svg>
-            <svg class="diagram__item diagram__item_second"
-                 viewbox="0 0 180 180"
-                 xmlns="http://www.w3.org/2000/svg">
-                <circle class="diagram__circle diagram__circle_second" fill="none" cx="90" cy="90" r="55" />
-            </svg>
-            <svg class="diagram__item diagram__item_third"
-                 viewbox="0 0 180 180"
-                 xmlns="http://www.w3.org/2000/svg">
-                <circle class="diagram__circle diagram__circle_third" cx="90" cy="90" r="90" />
-                <defs>
-            </svg>
+            <div class="diagram__item diagram__item_first">
+                <svg class="diagram__svg diagram__svg_first"
+                     viewbox="0 0 180 180"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <circle class="diagram__circle diagram__circle_first" stroke-dasharray="310,345.4" stroke="url(#gradient-first)" fill="none" cx="90" cy="90" r="55" />
+                    <defs>
+                    <linearGradient id="gradient-first" x1="0%" y1="0%" x2="0%" y2="100%" gradientTransform="rotate(70)">
+                    <stop offset="0%" stop-color="#031F31" />
+                    <stop offset="80%" stop-color="#399CDC" />
+                    </linearGradient>
+                    </defs>
+                </svg>
+            </div>
+            <div class="diagram__item diagram__item_second">
+                <svg class="diagram__svg diagram__svg_second"
+                     viewbox="0 0 180 180"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <circle class="diagram__circle diagram__circle_second" stroke-dasharray="35.4,345.4" fill="none" cx="90" cy="90" r="55" />
+                </svg>
+            </div>
+            <div class="diagram__item diagram__item_third">
+                <svg class="diagram__svg diagram__svg_third"
+                     viewbox="0 0 180 180"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <circle class="diagram__circle diagram__circle_third" cx="90" cy="90" r="90" />
+                    <defs>
+                </svg>
+            </div>
         </div>
     </div>
 </div>
