--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -7,12 +7,20 @@
     width: 100%;
   }
   &__diagrambox {
+    position: relative;
+
     width: 100%;
+    height: 450px;
   }
   &__item {
-    transform: rotate(-90deg);
+    position: absolute;
+    top: 50%;
+    left: 50%;
 
+    transform: translate(-50%, -50%);
     &_first {
+      z-index: 1;
+
       width: 300px;
       height: 300px;
       @include bp994-block() {
@@ -21,20 +29,33 @@
       }
     }
     &_second {
+      z-index: 3;
+
       width: 270px;
       height: 270px;
       @include bp994-block() {
-        width: 410px;
-        height: 410px;
+        width: 390px;
+        height: 390px;
       }
     }
     &_third {
+      z-index: 2;
+
       width: 180px;
+
       height: 180px;
       @include bp994-block() {
         width: 250px;
         height: 250px;
       }
+    }
+  }
+  &__svg {
+    &_first {
+      transform: rotate(150deg);
+    }
+    &_second {
+      transform: rotate(113deg);
     }
   }
   &__circle {
@@ -43,7 +64,8 @@
       stroke-width: 70px;
     }
     &_second {
-      stroke: $color_blue_light;
+      opacity: 0.2;
+      stroke: $color_blue_light_3;
       stroke-width: 70px;
     }
     &_third {
