--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -19,7 +19,7 @@
 
     transform: translate(-50%, -50%);
     &_first {
-      z-index: 1;
+      z-index: 2;
 
       width: 300px;
       height: 300px;
@@ -29,7 +29,7 @@
       }
     }
     &_second {
-      z-index: 3;
+      z-index: 1;
 
       width: 270px;
       height: 270px;
@@ -39,7 +39,7 @@
       }
     }
     &_third {
-      z-index: 2;
+      z-index: 3;
 
       width: 180px;
 
@@ -52,6 +52,7 @@
   }
   &__svg {
     &_first {
+      // transform: rotate(150deg);
       transform: rotate(150deg);
     }
     &_second {
