inwork: circle state_6

--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -51,6 +51,7 @@
     }
   }
   &__svg {
+    transition: transform $th;
     &_first {
       // transform: rotate(150deg);
       transform: rotate(150deg);
