--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -33,6 +33,7 @@
                     <circle class="diagram__circle diagram__circle_third" cx="90" cy="90" r="90" />
                     <defs>
                 </svg>
+                <div class="diagram__text">5000</div>
             </div>
         </div>
     </div>
