--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -6,6 +6,9 @@
   &__controlbox {
     width: 100%;
   }
+  &__control {
+    transition: transform $th;
+  }
   &__diagrambox {
     position: relative;
 
