inwork: diagram text

--- a/src/views/blocks/diagram/diagram.njk
+++ b/src/views/blocks/diagram/diagram.njk
@@ -33,8 +33,12 @@
                     <circle class="diagram__circle diagram__circle_third" cx="90" cy="90" r="90" />
                     <defs>
                 </svg>
-                <div class="diagram__text">5000</div>
+                <div class="diagram__value">5000</div>
             </div>
+        </div>
+        <div class="diagram__textbox">
+            <div class="diagram__text diagram__text_first deco__w deco__w_700">5,000 Helixes</div>
+            <div class="diagram__text diagram__text_second">will be up for sale</div>
         </div>
     </div>
 </div>
