--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -5,7 +5,10 @@
   }
   &__controlbox {
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
+
   &__control {
     transition: transform $th;
   }
@@ -14,6 +17,9 @@
 
     width: 100%;
     height: 450px;
+  }
+  &__textbox {
+    width: 100%;
   }
   &__item {
     position: absolute;
@@ -77,7 +83,7 @@
       fill: $color_light;
     }
   }
-  &__text {
+  &__value {
     position: absolute;
     top: 50%;
     left: 50%;
