--- a/src/styles/custom/diagram.scss
+++ b/src/styles/custom/diagram.scss
@@ -4,9 +4,17 @@
     flex-wrap: wrap;
   }
   &__controlbox {
-    width: 100%;
+    position: relative;
+    z-index: 4;
+
     display: flex;
     justify-content: center;
+
+    width: 100%;
+    margin-bottom: 25px;
+    @include bp994-block() {
+      margin-bottom: 50px;
+    }
   }
 
   &__control {
@@ -16,10 +24,16 @@
     position: relative;
 
     width: 100%;
-    height: 450px;
+    height: 300px;
+    margin-bottom: 25px;
+    @include bp994-block() {
+      height: 450px;
+      margin-bottom: 50px;
+    }
   }
   &__textbox {
     width: 100%;
+    text-align: center;
   }
   &__item {
     position: absolute;
