--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -49,6 +49,8 @@
 @import './custom/menu';
 @import './custom/feature';
 @import './custom/feature-item';
+@import './custom/map';
+@import './custom/map-row';
 /* Навигация */
 * {
   box-sizing: border-box;
