--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -25,7 +25,7 @@
     } %}
     {% include "sections/feature-section.njk" %}
     {% set inject = {
-    wrapper: 'wrap',
+    wrapper: 'slim',
     sectionTitle: 'Holders benefits',
     sectionClass: '',
     deco: true
@@ -33,14 +33,14 @@
     {% include "sections/benefit-section.njk" %}
     <div class="page__section-bg">
         {% set inject = {
-        wrapper: 'wrap',
+        wrapper: 'slim',
         sectionTitle: 'Tokenomics',
         sectionClass: '',
         deco: true
         } %}
         {% include "sections/token-section.njk" %}
         {% set inject = {
-        wrapper: 'wrap',
+        wrapper: 'slim',
         sectionTitle: 'HelixMap',
         sectionClass: '',
         deco: true
