--- a/src/styles/custom/map.scss
+++ b/src/styles/custom/map.scss
@@ -1,5 +1,9 @@
 .map {
-  &__row{}
-  &__item{}
+  &__inner {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__row {
+    width: 100%;
+  }
 }
-
