--- a/src/views/blocks/map/map-row.njk
+++ b/src/views/blocks/map/map-row.njk
@@ -1,9 +1,18 @@
 <div class="map__row map-row">
     <div class="map-row__inner">
         <div class="map-row__cell">
-            <div class="map-row__box">
-                <div class="map-item__line">{{ item.line_1 }}</div>
-                <div class="map-item__line">{{ item.line_2 }}</div>
+            <div class="map-row__span">
+                <div class="map-row__imgbox">
+                    <img src="/img/map/map_{{ loop.index }}.svg"
+                         alt=""
+                         class="img map-row__img">
+                </div>
+                <div class="map-row__textbox">
+                    <div class="map-row__textcell">
+                        <div class="map-row__text-line">{{ item.line_1 }}</div>
+                        <div class="map-row__text-line">{{ item.line_2 }}</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="map-row__cell"></div>
