--- a/src/views/blocks/map/map-row.njk
+++ b/src/views/blocks/map/map-row.njk
@@ -15,6 +15,8 @@
                 </div>
             </div>
         </div>
-        <div class="map-row__cell"></div>
+        <div class="map-row__cell">
+            <div class="map-row__deco"></div>
+        </div>
     </div>
 </div>
