--- a/src/styles/fundamental/page.scss
+++ b/src/styles/fundamental/page.scss
@@ -112,6 +112,7 @@
 
       background: url('/img/bg/bg_big.png') no-repeat;
       mix-blend-mode: multiply;
+      background-size: cover;
     }
   }
   &__footer {
